--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<groupId>in.ashokit</groupId>
 	<artifactId>spring-boot-mysql</artifactId>
 	<version>1.0</version>
-	<packaging>jar</packaging>
+	<packaging>war</packaging>
 	<name>spring-boot-mysql</name>
 	<description>Demo project for springboot-mysql</description>
 	<properties>
