--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       - springboot-db-net
     environment:
       - MYSQL_ROOT_PASSWORD=root
-      - MYSQL_DATABASE=sbms
+      - MYSQL_DATABASE=Pthakare@27
     volumes:
       - /data/mysql
 networks:
